fix design bug that mention search list is not overlaped in parent element(edit area).

--- a/src/mention/mention-list.component.scss
+++ b/src/mention/mention-list.component.scss
@@ -3,19 +3,17 @@
   border-collapse: collapse;
   padding: 0;
   margin: 2px 0 0;
-  box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
   overflow: auto;
   max-height: 300px;
   height: auto;
   background-color: white;
-  position: absolute;
-  top: 100%;
-  left: 0;
+  position: fixed;
+  top: auto;
+  left: auto;
   z-index: 1000;
   min-width: 160px;
   font-size: 14px;
   text-align: left;
-  border: 1px solid #ccc;
   border-radius: 2px;
   > .mentionItem {
     &:hover, &.active {
